Fix issue with overflow in chat

--- a/app/assets/stylesheets/components/chat.scss
+++ b/app/assets/stylesheets/components/chat.scss
@@ -4,12 +4,11 @@
   border: 1px solid black;
   width: 50%;
   height: 75%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+
   margin: 20px;
 
   form {
+    height: 10%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -38,8 +37,12 @@
 }
 
 .messages {
+  height: 90%;
   width: 100%;
-  overflow: auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 
   li {
     padding: 10px;
